# src/main/java/com/apollogix/demo/mapper/ExaminationNonCorrectAnswerResponseDTOMapper.java
@@ -1,11 +1,0 @@
-package com.apollogix.demo.mapper;
-
-import com.apollogix.demo.domain.Examination;
-import com.apollogix.web.rest.model.ExaminationNonCorrectAnswerResponseDTO;
-import org.mapstruct.Mapper;
-
-@Mapper(componentModel = "spring", uses = {QuestionNonCorrectAnswerResponseDTOMapper.class})
-public interface ExaminationNonCorrectAnswerResponseDTOMapper
-        extends EntityMapper<ExaminationNonCorrectAnswerResponseDTO, Examination> {
-
-}
